[gd_scene load_steps=10 format=3 uid="uid://bjxkrkvfm1oal"]

[ext_resource type="Script" uid="uid://baev1t217ds24" path="res://pg_down.gd" id="1_k5emy"]
[ext_resource type="AudioStream" uid="uid://cosc81evi4ud" path="res://SFX/spacebar-click-keyboard-199448_iju6vpxH.mp3" id="2_kmqvh"]
[ext_resource type="Texture2D" uid="uid://dtqmv0k1v1lu8" path="res://Art/Buttons/pgdn keycap button-Sheet.png" id="3_k5emy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63sh6"]
size = Vector2(16, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_844ok"]
size = Vector2(16, 9.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbepe"]
size = Vector2(16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmqvh"]
atlas = ExtResource("3_k5emy")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_coa1l"]
atlas = ExtResource("3_k5emy")
region = Rect2(0, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_ti34l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmqvh")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_coa1l")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}]

[node name="PgDown" type="StaticBody2D"]
script = ExtResource("1_k5emy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_63sh6")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1.0625)
shape = SubResource("RectangleShape2D_844ok")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_vbepe")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kmqvh")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.25, -3.875)
scale = Vector2(0.0917969, 0.124023)
sprite_frames = SubResource("SpriteFrames_ti34l")
animation = &"Up"

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
